--- a/index.html
+++ b/index.html
@@ -7,21 +7,30 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="navbar">
+  <header>
     <nav>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+        <a href="#" class="nav-link">Home</a>
+        <a href="#" class="nav-link">About</a>
+        <a href="#" class="nav-link">Services</a>
+        <a href="#" class="nav-link">Contact</a>
     </nav>
-  </header>
+</header>
 
-  <section id="home" class="section">Home</section>
-  <section id="about" class="section">About </section>
-  <section id="services" class="section">Services</section>
-  <section id="contact" class="section">Contact</section>
+<section>
+    <h1>WEB DEVELOPMEMT!</h1>
+    <p>Unleasing Digital Creativity: Explore the Art of Web Development!</p>
+
+    <div class="image-container">
+        <img src="./Image 1.jpg" alt="Image 1" class="image">
+        <img src="./Image 2.jpg" alt="Image 2" class="image">
+        <img src="./Image 3.jpg" alt="Image 2" class="image">
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2024 WD01 Website. All rights reserved.</p>
+</footer>
+
 
   <script src="script.js"></script>
 </body>
