--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>Unleasing Digital Creativity: Explore the Art of Web Development!</p>
 
     <div class="image-container">
-        <img src="./Image 1.jpg" alt="Image 1" class="image">
+        <img src="./Image 1.jpg" alt="Image 1" class="image1">
         <img src="./Image 2.jpg" alt="Image 2" class="image">
         <img src="./Image 3.jpg" alt="Image 2" class="image">
     </div>
