--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     <p>Unleasing Digital Creativity: Explore the Art of Web Development!</p>
 
     <div class="image-container">
-        <img src="./Image 1.jpg" alt="Image 1" class="image">
-        <img src="./Image 2.jpg" alt="Image 2" class="image">
+        <img src="./Image 1.jpg" alt="Image 1" class="image"><br>
+        <img src="./Image 2.jpg" alt="Image 2" class="image"><br>
         <img src="./Image 3.jpg" alt="Image 2" class="image">
     </div>
 </section>
-
 <footer>
     <p>&copy; 2024 WD01 Website. All rights reserved.</p>
 </footer>
